# melton

./: .gitignore  BREAKING_CHANGES.md  CHOOSE_YOUR_DEPLOYMENT.md  CODING_PRINCIPLES.md  COST_OPTIMIZATION.md  DATABASE_PRICING_COMPARISON.md  DEPLOYMENT.md  DEPLOYMENT_COST_COMPARISON.md  DEPLOYMENT_OPTIONS_SUMMARY.md  FRONTEND_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  RECOMMENDED_DEPLOYMENT.md  RENDER_QUICK_START.md  START_HERE.md  TESTING_GUIDE.md  eslint.config.mjs  package.json  render-budget.yaml  render-free-tier.yaml  render-smart-budget.yaml  render.yaml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SETUP.md  alembic.ini  cleanup_agent_instructions.py  docker-compose.yml  fix_existing_agent.py  pyproject.toml  start.sh  test_tool_calling.py  update_agent_instructions.py
backend/alembic/: README  env.py
backend/alembic/versions/: 001_initial_schema.py  20251220_2140_add_user_api_keys_table.py  20251222_1619_add_llm_models_table.py  20260117_0000_add_users_table.py  20260117_0001_update_agents_for_users.py  20260117_0002_add_agent_permissions.py  20260117_0003_add_user_to_conversations.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py
backend/app/api/v1/: agents.py  auth.py  (+11 more)
backend/app/channels/: __init__.py
backend/app/llm/: anthropic_provider.py  base_provider.py  factory.py  google_provider.py  openai_provider.py
backend/app/models/: __init__.py  agent.py  agent_permission.py  conversation.py  deployment.py  encrypted_credential.py  execution_trace.py  integration.py  llm_model.py  message.py  tool.py  user.py  user_api_key.py
backend/app/schemas/: __init__.py  agent.py  auth.py  integration.py  llm_model.py  tool.py  user_api_key.py
backend/app/services/: agent_defaults.py  agent_service.py  auth_service.py  conversation_service.py  credential_service.py  execution_service.py  integration_service.py  llm_model_service.py  oauth_service.py  permission_service.py  tool_service.py  user_api_key_service.py
backend/app/templates/: default_agent_instructions.md
backend/app/tools/: __init__.py  api_tool.py  base_tool.py  builtin_tool.py  factory.py  llm_tool.py  registry.py
backend/app/utils/: encryption.py  observability.py  openapi_parser.py  output_transformer.py
backend/scripts/: init_agent_builder.py  update_agent_builder_instructions.sql
backend/tests/: conftest.py
backend/tests/unit/: test_agent_service.py  test_encryption.py  test_tool_registry.py
(+74 files in other folders)
