[tool.poetry]
name = "melton-backend"
version = "0.1.0"
description = "Production Python API for Dr. Melton Agent Builder"
authors = ["Dr. Melton Team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
alembic = "^1.14.0"
asyncpg = "^0.30.0"  # PostgreSQL async driver
psycopg2-binary = "^2.9.10"  # PostgreSQL sync driver for Alembic
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}  # JWT tokens
passlib = {extras = ["bcrypt"], version = "^1.7.4"}  # Password hashing
httpx = "^0.28.0"  # Async HTTP client
redis = "^5.2.0"
celery = "^5.4.0"
anthropic = "^0.39.0"  # Claude
openai = "^1.57.1"  # GPT
google-generativeai = "^0.8.3"  # Gemini
langfuse = "^2.57.1"  # Observability
cryptography = "^44.0.0"  # Encryption
pyyaml = "^6.0.2"  # OpenAPI parsing
python-multipart = "^0.0.18"  # Form data parsing
websockets = "^14.1"  # WebSocket support

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
ruff = "^0.8.0"
black = "^24.10.0"
mypy = "^1.13.0"
pre-commit = "^4.0.0"
httpx = "^0.28.0"  # For testing

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "redis.*",
    "langfuse.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=app --cov-report=term-missing --cov-report=html"
